# routeplane-ce

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  SELF_HOST.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  deny.toml  docker-compose.yml  justfile  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: ci.yml  identity-guard.yml  image.yml
benchmarks/: .gitignore  Cargo.toml  README.md  justfile
benchmarks/perf/: README.md  RESULTS.md  payload.json  run.sh
benchmarks/perf/mock-upstream/: Cargo.toml
benchmarks/perf/mock-upstream/src/: main.rs
benchmarks/perf/results/2026-07-04-azure-d8s-v5/: floor-rep1.txt  floor-rep2.txt  floor-rep3.txt  gateway-rep1.txt  gateway-rep2.txt  gateway-rep3.txt
benchmarks/rtk-eval/: Cargo.toml  RESULTS.md
benchmarks/rtk-eval/corpus/: .gitignore  README.md  generate.py  traces.jsonl
benchmarks/rtk-eval/src/: main.rs
configs/: keys.example.json  routing-policies.example.json
crates/adapters/: Cargo.toml
crates/adapters/src/: anthropic.rs  azure_openai.rs  bedrock.rs  client.rs  cohere.rs  deepseek.rs  fireworks.rs  gemini.rs  groq.rs  lib.rs  mistral.rs  openai.rs  openai_compat.rs  openai_compatible.rs  openrouter.rs  sse.rs  together.rs  vision.rs  xai.rs
crates/adapters/tests/: anthropic_adapter.rs  azure_openai_adapter.rs  deepseek_adapter.rs  embeddings_adapter.rs  fireworks_adapter.rs  gemini_adapter.rs  groq_adapter.rs  openai_adapter.rs  openai_compat_adapter.rs  openrouter_adapter.rs  together_adapter.rs  xai_adapter.rs
crates/adapters/tests/common/: mod.rs
crates/cache/: Cargo.toml
crates/cache/src/: idempotency.rs  lib.rs
crates/entitlements/: Cargo.toml
crates/entitlements/src/: lib.rs
crates/flags/: Cargo.toml
crates/flags/src/: lib.rs
crates/guardrails/: Cargo.toml
crates/guardrails/src/: detect.rs  lib.rs  schema.rs
crates/guardrails/tests/: security_redteam.rs
crates/ledger-vocab/: Cargo.toml
crates/ledger-vocab/src/: entry.rs  lib.rs  security.rs
crates/limits/: Cargo.toml
crates/limits/src/: auth_failures.rs  distributed.rs  fx.rs  lib.rs  pricing.rs
crates/policy/: Cargo.toml
crates/policy/src/: lib.rs
crates/prompts/: Cargo.toml
crates/prompts/src/: lib.rs
crates/residency/: Cargo.toml
crates/residency/src/: lib.rs  verhoeff.rs
crates/routeplane/: Cargo.toml
crates/routeplane/src/: analytics_api.rs  api_error.rs  audio_api.rs  auth.rs  cache_api.rs  ce_stubs.rs  config.rs  config_overlay.rs  console_accounts.rs  console_api.rs  console_auth.rs  custom_providers.rs  embeddings.rs  feedback_api.rs  finops_api.rs  guardrails.rs  images_api.rs  ledger_sink.rs  lib.rs  logs_api.rs  main.rs  messages_api.rs  metrics.rs  models_api.rs  observability.rs  otel.rs  prompts_api.rs  provenance.rs  providers_api.rs  proxy.rs  rerank_api.rs  residency_api.rs  status.rs
crates/routeplane/tests/: acceptance.rs  analytics_integration.rs  audio_integration.rs  cache_integration.rs  cache_savings_integration.rs  config_overlay_integration.rs  custom_provider_endpoints_integration.rs  custom_providers_integration.rs  embeddings_integration.rs  feedback_integration.rs  finops_integration.rs  guardrail_eval.rs  idempotency_integration.rs  images_integration.rs  latency_stats.rs  limits_integration.rs  logs_integration.rs  messages_integration.rs  metrics_integration.rs  model_catalog_gate_integration.rs  models_integration.rs  multi_account_integration.rs  prompts_integration.rs  rerank_integration.rs  residency_integration.rs  speech_integration.rs  status_integration.rs  stream_abort_integration.rs  stream_truncation_integration.rs  timeseries_integration.rs  token_compression_integration.rs  trace_id_header.rs
crates/routeplane/tests/common/: mod.rs
crates/routeplane/tests/guardrail_eval/corpus/: manifest.toml
crates/routeplane/tests/guardrail_eval/corpus/injection/: attacks.jsonl  benign.jsonl
crates/routeplane/tests/guardrail_eval/corpus/pii/: known_gaps.jsonl  negatives.jsonl  positives.jsonl
crates/router/: Cargo.toml
crates/router/src/: lib.rs  strategy.rs
crates/rtk/: Cargo.toml
crates/rtk/benches/: rtk_compress.rs
crates/rtk/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/unicode/: Cargo.toml
crates/unicode/src/: lib.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/public/: site.webmanifest
dashboard/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
dashboard/src/components/: EnterpriseHint.tsx  EnterpriseUpsell.tsx  Login.tsx
dashboard/src/components/charts/: index.tsx
dashboard/src/components/layout/: AppShell.tsx  PageHeader.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx  command-palette.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  input.tsx  logo.tsx  misc.tsx  popover.tsx  select.tsx  stat-card.tsx  states.tsx  switch.tsx  table.tsx  tabs.tsx  toast.tsx  tooltip.tsx
dashboard/src/lib/: auth.ts  nav.ts  theme.ts  utils.ts
dashboard/src/lib/api/: client.ts  config.ts  types.ts
dashboard/src/routes/: Budgets.tsx  Cache.tsx  Enterprise.tsx  Health.tsx  Keys.tsx  Logs.tsx  Models.tsx  NotFound.tsx  Overview.tsx  Playground.tsx  Providers.tsx  Reference.tsx  Settings.tsx  Usage.tsx
deploy/azure/: azuredeploy.json
docs/brand/: README.md  social-preview.html
docs/demo/: README.md  ask.sh  hello.py  mk-payload.py
docs/demo-console/: README.md  run.sh  walkthrough.js
docs/demos/: README.md  cli-demo.tape  demo.mjs  demo.py  mcp-demo.mcp.json  mcp-demo.tape  python-demo.tape  ts-demo.tape
