[package]
name = "rtk-eval"
description = "RTK trace-replay eval — measures real token reduction of routeplane-rtk::compress over a committed coding-agent corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
# The library under test — the exact crate the gateway hot path calls
# (crates/routeplane/src/proxy.rs applies `routeplane_rtk::compress` to every
# `tool`-role message when Feature::TokenCompression is active).
routeplane-rtk = { path = "../../crates/rtk" }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
