[package]
name = "routeplane-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# Rung-0 exact-match response cache (G2.5: PRD-007 + ADR-022 §2/§3).
# In-memory, per-replica, $0 standing cost. 64 shards published through
# `ArcSwap`: reads are lock-free (one SHA-256 + one atomic load + one map
# lookup); ALL writes are serialized through a single off-path writer thread,
# so readers never wait and writers never race. Eviction is TTL-first, then
# FIFO by insert time ("approximate-LRU" — ADR-022 §2 declines true LRU).
#
# Boundary: storage + keying ONLY. The `cache` config directive is parsed by
# `crates/policy` (config surface); participation/bypass policy lives in the
# proxy. This crate depends on `routeplane-types` only — no tokio, no network,
# no locks on the read path.
[dependencies]
routeplane-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }

# Opt in to the workspace lint policy (deny warnings) — see root Cargo.toml.
[lints]
workspace = true
