[package]
name = "routeplane-prompts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# The prompt-registry engine (PRD-010 / G3.5): the prompt/version/label object
# model, reference-grammar resolution, the logic-less mustache-lite renderer
# (variables, sections, partials), fail-closed JSON load, and a lock-free
# ArcSwap snapshot. PURE — no network, no types crate, no I/O beyond reading a
# config file at startup. Globalises nothing; rendering is jurisdiction-neutral
# text.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }

# Opt in to the workspace lint policy (deny warnings) — see root Cargo.toml.
[lints]
workspace = true
