[package]
name = "routeplane-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

# Routing + health: a lock-free per-provider circuit breaker + latency EWMA,
# and candidate-ordering strategies (priority/cost/latency/weighted). std-only
# (no deps) so the hot path stays lean — weighted uses an injectable seedable
# RNG (SplitMix64) rather than the `rand` crate to stay dependency-free and
# keep ordering deterministic under test.
[dependencies]

# Opt in to the workspace lint policy (deny warnings) — see root Cargo.toml.
[lints]
workspace = true
