[package]
name = "mock-upstream"
description = "Zero-work OpenAI-compatible mock upstream for isolating Routeplane gateway overhead in perf runs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
